«Express» section finished

--- a/5-express/package.json
+++ b/5-express/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js web application framework",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "express": "node 1-express-usage/app.js",
+    "ejs": "node 2-ejs-template/index.js"
   },
   "keywords": [
     "node.js",
@@ -14,6 +15,7 @@
   "author": "User KZ",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
