--- a/6-websockets/package.json
+++ b/6-websockets/package.json
@@ -4,7 +4,8 @@
   "description": "Socket.io JavaScript library",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server1": "nodemon 1-socket.io/index.js",
+    "server2": "nodemon 2-pug-template-engine/index.js"
   },
   "keywords": [
     "websocket",
