--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Thumbs.db
 /5-express/package-lock.json
 /6-websockets/node_modules/
 /6-websockets/package-lock.json
+/7-creating-app/node_modules/
+/7-creating-app/package-lock.json
