--- a/7-creating-app/package.json
+++ b/7-creating-app/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "ejs": "latest",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "latest",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nconf": "^0.12.0"
   }
 }
