--- a/7-creating-app/package.json
+++ b/7-creating-app/package.json
@@ -9,9 +9,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "latest",
+    "ejs-locals": "^1.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "nconf": "^0.12.0"
+    "nconf": "^0.12.0",
+    "winston": "^3.8.1"
   }
 }
