--- a/7-creating-app/package.json
+++ b/7-creating-app/package.json
@@ -12,6 +12,7 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.9.0",
     "morgan": "~1.9.1",
     "nconf": "^0.12.0",
     "winston": "^3.8.1"
